<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:id="@+id/main_item"
    android:background="@drawable/recent_item_bg">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/pic_item"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:transitionName="ImageTransition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/message_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circleImageView" />

    <TextView
        android:id="@+id/message_item"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/message"
        android:textColor="#828DA4"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/pic_item"
        app:layout_constraintTop_toBottomOf="@+id/name_item" />

    <TextView
        android:id="@+id/time_item"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/time"
        android:textColor="#000000"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/new_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name_item"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/new_item"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/new_bg"
        android:gravity="center"
        android:text="@string/_2"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_item" />

    <TextView
        android:id="@+id/name_item"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:gravity="center_vertical"
        android:text="@string/name"
        android:textColor="#020B2D"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/message_item"
        app:layout_constraintEnd_toStartOf="@+id/time_item"
        app:layout_constraintStart_toEndOf="@+id/pic_item"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>