<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pullToRefresh"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#009EFF">

        <TextView
            android:id="@+id/NoInternet_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000"
            android:gravity="center"
            android:text="@string/no_internet_connection"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress_favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:progressDrawable="@color/design_default_color_background"
            android:progressTint="#FFC107"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/favoriteRecycle"
            app:layout_constraintEnd_toEndOf="@+id/favoriteRecycle"
            app:layout_constraintStart_toStartOf="@+id/favoriteRecycle"
            app:layout_constraintTop_toTopOf="@+id/favoriteRecycle" />

        <TextView
            android:id="@id/favorite_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="9dp"
            android:text="@string/favorites"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/favoriteRecycle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favoriteRecycle"
            android:layout_width="0dp"
            android:layout_height="122dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="#009EFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favorite_txt" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecentRecycle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/recent_bg"
            android:paddingTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favoriteRecycle" />

        <ProgressBar
            android:id="@+id/progress_recent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="411dp"
            android:progressTint="#FFC107"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/RecentRecycle"
            app:layout_constraintEnd_toEndOf="@+id/RecentRecycle"
            app:layout_constraintStart_toStartOf="@+id/RecentRecycle"
            app:layout_constraintTop_toTopOf="@+id/RecentRecycle" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/new_group"
            android:textColor="#FEF7F7"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/select_contacts"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="35dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/abc_vector_test"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
